force-app/main/default/objects/ProductItem/fields/Corrective_Booking_Reason__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Booking_Reason__c</fullName>
    <description>Created by:- Riddhi Mittal on 1/25/2021 for US-2245</description>
    <label>Corrective Booking Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>