force-app/main/default/objects/ProductItem/fields/Counted_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Counted_Quantity__c</fullName>
    <description>Created By:- Ridddhi Mittal on 1/25/2021 for US- 2245</description>
    <label>Counted Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>