force-app/main/default/objects/ProductItem/fields/Current_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Date__c</fullName>
    <description>Created by :- Riddhi Mittal on 1/25/2021 for US- 2245</description>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Date</label>
    <type>Date</type>
</CustomField>