force-app/main/default/objects/ProductItem/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-822
Purpose: Basic level object</description>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Product Items</relationshipLabel>
    <relationshipName>Product_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>