force-app/main/default/objects/ProductItem/fields/Estimated_Date_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Date_of_Delivery__c</fullName>
    <label>Earliest Estimated Date of Delivery</label>
    <type>Date</type>
</CustomField>