force-app/main/default/objects/ProductItem/fields/fm_AmountVAT__c.field-meta.xml
<CustomField>
    <fullName>fm_AmountVAT__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-822
Purpose: Basic level object</description>
    <formula>LastUnitPriceVAT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>