force-app/main/default/objects/ProductItem/fields/fm_IsRequiredPart__c.field-meta.xml
<CustomField>
    <fullName>fm_IsRequiredPart__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-822
Purpose: Basic level object</description>
    <formula>Product2.IsRequiredPart__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Required Part (P)</label>
    <type>Checkbox</type>
</CustomField>