force-app/main/default/objects/ProductItem/fields/fm_ProductCarModelCode__c.field-meta.xml
<CustomField>
    <fullName>fm_ProductCarModelCode__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-822
Purpose: Basic level object</description>
    <formula>Product2.DAOSCarModelCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Car Model Code</label>
    <type>Text</type>
</CustomField>