force-app/main/default/objects/ProductItem/fields/fm_ProductCodeOld__c.field-meta.xml
<CustomField>
    <fullName>fm_ProductCodeOld__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-822
Purpose: Basic level object</description>
    <formula>Product2.AMOSProductCodeOld__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code (Old)</label>
    <type>Text</type>
</CustomField>