force-app/main/default/objects/ProductItem/fields/fm_ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>fm_ProductFamily__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-822
Purpose: Basic level object</description>
    <formula>TEXT(Product2.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>