force-app/main/default/objects/ProductItem/fields/fm_ProductHight__c.field-meta.xml
<CustomField>
    <fullName>fm_ProductHight__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-822
Purpose: Basic level object</description>
    <formula>Product2.Height__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>