force-app/main/default/objects/ProductItem/fields/fm_ProductIsActive__c.field-meta.xml
<CustomField>
    <fullName>fm_ProductIsActive__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-822
Purpose: Basic level object</description>
    <formula>Product2.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>