force-app/main/default/objects/ProductItem/fields/fm_ProductStartDate__c.field-meta.xml
<CustomField>
    <fullName>fm_ProductStartDate__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-822
Purpose: Basic level object</description>
    <formula>Product2.StartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>