force-app/main/default/objects/ProductItem/fields/fm_ProductWidth__c.field-meta.xml
<CustomField>
    <fullName>fm_ProductWidth__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-822
Purpose: Basic level object</description>
    <formula>Product2.Width__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>