force-app/main/default/objects/ProductItem/fields/IsBelowSafetyStock__c.field-meta.xml
<CustomField>
    <fullName>IsBelowSafetyStock__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-822
Purpose: Basic level object</description>
    <formula>IF(QuantityOnHand &lt; MinimumSafetyStock__c , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Below Safety Stock</label>
    <type>Checkbox</type>
</CustomField>