force-app/main/default/objects/ProductItem/fields/IsRequiredPart__c.field-meta.xml
<CustomField>
    <fullName>IsRequiredPart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-822
Purpose: Basic level object</description>
    <label>Is Required Part (L)</label>
    <type>Checkbox</type>
</CustomField>