force-app/main/default/objects/ProductItem/fields/Last_Purchase_Date1__c.field-meta.xml
<CustomField>
    <fullName>Last_Purchase_Date1__c</fullName>
    <description>Field created as part of user story: https://jira.hyundai-autoever.eu/browse/GD-826
by Neha Aggrawal</description>
    <label>Last Purchase Date</label>
    <type>Date</type>
</CustomField>