force-app/main/default/objects/ProductItem/fields/LastReceivedQuantity__c.field-meta.xml
<CustomField>
    <fullName>LastReceivedQuantity__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-822
Purpose: Basic level object</description>
    <label>Last Received Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>