force-app/main/default/objects/ProductItem/fields/LastUnitPriceVAT__c.field-meta.xml
<CustomField>
    <fullName>LastUnitPriceVAT__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-822
Purpose: Basic level object</description>
    <label>Last Unit Price VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>