force-app/main/default/objects/ProductItem/fields/MinimumSafetyStock__c.field-meta.xml
<CustomField>
    <fullName>MinimumSafetyStock__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-822
Purpose: Basic level object</description>
    <label>Minimum Safety Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>