force-app/main/default/objects/ProductItem/fields/MSRP_Price__c.field-meta.xml
<CustomField>
    <fullName>MSRP_Price__c</fullName>
    <description>Created By:- Riddhi Mittal on 1/25/2021 for US- 2245</description>
    <label>MSRP / Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>