force-app/main/default/objects/ProductItem/fields/Quantity_Reserved__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Reserved__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantity Reserved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>