force-app/main/default/objects/ProductItem/fields/SearchKeyword__c.field-meta.xml
<CustomField>
    <fullName>SearchKeyword__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-822
Purpose: Basic level object</description>
    <label>Search Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>