force-app/main/default/objects/ProductItem/fields/Storage_Compartment__c.field-meta.xml
<CustomField>
    <fullName>Storage_Compartment__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 10th Nov 2020
User Story: https://jira.hyundai-autoever.eu/browse/GD-964
Purpose: This field will store the storage compartment location.</description>
    <label>Storage Compartment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>