force-app/main/default/objects/ProductItem/fields/Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>Storage_Location__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 10th Nov 2020
User Story: https://jira.hyundai-autoever.eu/browse/GD-964
Purpose: This field will store the location.</description>
    <label>Storage Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Outside</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>