force-app/main/default/objects/ProductItem/fields/Storage_Shelf__c.field-meta.xml
<CustomField>
    <fullName>Storage_Shelf__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 10th Nov 2020
User Story: https://jira.hyundai-autoever.eu/browse/GD-964
Purpose: This field will store the storage self location.</description>
    <label>Storage Shelf</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>