force-app/main/default/objects/ProductItem/validationRules/AfterSales_QuantityonInventory.validationRule-meta.xml
<ValidationRule>
    <fullName>AfterSales_QuantityonInventory</fullName>
    <active>false</active>
    <errorConditionFormula>QuantityOnHand  = 0
&amp;&amp;
$Profile.Name != &quot;DIH Integration Profile&quot;</errorConditionFormula>
    <errorDisplayField>QuantityOnHand</errorDisplayField>
    <errorMessage>We cannot save the record with Quantity On Hand is&quot;0&quot; value</errorMessage>
</ValidationRule>