force-app/main/default/objects/ProductItem/listViews/All_ProductItems.listView-meta.xml
<ListView>
    <fullName>All_ProductItems</fullName>
    <columns>Name</columns>
    <columns>Product2</columns>
    <columns>fm_ProductCode__c</columns>
    <columns>Department__c</columns>
    <columns>Location</columns>
    <columns>QuantityOnHand</columns>
    <columns>Estimated_Date_of_Delivery__c</columns>
    <columns>Last_Purchase_Date1__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Inventories</label>
</ListView>