force-app/main/default/objects/ProductItem/listViews/My_ProductItems.listView-meta.xml
<ListView>
    <fullName>My_ProductItems</fullName>
    <columns>Name</columns>
    <columns>Product2</columns>
    <columns>Location</columns>
    <columns>QuantityOnHand</columns>
    <filterScope>Mine</filterScope>
    <label>My Inventories</label>
</ListView>