force-app/main/default/objects/ProductItem/listViews/Shared_Inventory.listView-meta.xml
<ListView>
    <fullName>Shared_Inventory</fullName>
    <columns>Name</columns>
    <columns>Product2</columns>
    <columns>Location</columns>
    <columns>QuantityOnHand</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsShared__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Shared Inventory</label>
    <language>en_US</language>
</ListView>